2010-12-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Improve comments in tests `posixsubst*.test'.
	* tests/posixsubst-data.test: Improve comment explaining why we
	try also empty match suffix.
	* tests/posixsubst-extradist.test: Likewise.
	* tests/posixsubst-ldadd.test: Likewise.
	* tests/posixsubst-libraries.test: Likewise.
	* tests/posixsubst-ltlibraries.test: Likewise.
	* tests/posixsubst-programs.test: Likewise.
	* tests/posixsubst-scripts.test: Likewise.
	* tests/posixsubst-sources.test: Likewise.
	* tests/posixsubst-tests.test: Likewise.
	Suggested by Ralf Wildenhues.

2010-12-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix typos in test comments.
	* tests/posixsubst-data.test, tests/posixsubst-extradist.test,
	tests/posixsubst-ldadd.test, tests/posixsubst-libraries.test,
	tests/posixsubst-ltlibraries.test, tests/posixsubst-programs.test,
	tests/posixsubst-scripts.test, tests/posixsubst-sources.test,
	tests/posixsubst-tests.test: Fix typos.

2010-12-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Test `$(var:suf=rpl)' expansion in special automake variables.
	* tests/posixsubst-data.test: New test.
	* tests/posixsubst-extradist.test: Likewise.
	* tests/posixsubst-ldadd.test: Likewise.
	* tests/posixsubst-libraries.test: Likewise.
	* tests/posixsubst-ltlibraries.test: Likewise.
	* tests/posixsubst-programs.test: Likewise.
	* tests/posixsubst-scripts.test: Likewise.
	* tests/posixsubst-sources.test: Likewise.
	* tests/posixsubst-tests.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2010-11-25  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix spurious failures in `silent*.test' for $CC != gcc
	In some tests on automake-produced silent rules, we forced the
	use of gcc depmode to improve testsuite coverage; but this has
	unsurprisingly led to spurious failures when some non-GNU C
	compilers were used.  So we are now careful to require GCC in
	tests that force gcc depmode.
	From reports by Ralf Wildenhues.