@@ -1,5 +1,11 @@
 2010-12-18  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Make test 'posixsubst-script' portable to MinGW/MSYS.
+	* tests/posixsubst-script.test: Ensure that the generated dummy
+	scripts really start with a shebang line, to work around a
+	limitation of 'test -x' on MinGW/MSYS.
+	Reported by Ralf Wildenhues.
+
 	Improve comments in tests `posixsubst*.test'.
 	* tests/posixsubst-data.test: Improve comment explaining why we
 	try also empty match suffix.
